# smart-farm-intelligence-hub

./: README.md  config.toml  create_sample_fields.py  environment.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py  test_part1.sh
data/: SmartFarm.qgz  weekly_pipeline.db
data/processed/: ndvi_latest.tif  ndvi_latest.tif.aux.xml  ndvi_zonal.csv
data/raw/: fields.geojson
pipeline/: __init__.py  clean_merge.py  config.py  config_CORRECT.py  config_EMPTY.yaml  export_qgis.py  ingest_noaa.py  ingest_sentinel.py  ingest_usda.py  run_pipeline.py  yield_model.py
sql/: schema.sql
